[gd_scene load_steps=8 format=3 uid="uid://dypocwi3xeert"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_0qjd5"]
[ext_resource type="Texture2D" uid="uid://cg6lsmu2f0us1" path="res://icon.svg" id="2_n7ry5"]

[sub_resource type="Animation" id="Animation_8ivhy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ykorj"]
resource_name = "trans_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 650)]
}

[sub_resource type="Animation" id="Animation_yovy1"]
resource_name = "trans_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 650), Vector2(0, 1300)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmqob"]
_data = {
"RESET": SubResource("Animation_8ivhy"),
"trans_in": SubResource("Animation_ykorj"),
"trans_out": SubResource("Animation_yovy1")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_7wh3x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n7ry5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="shop" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0qjd5")

[node name="Panel" type="Panel" parent="."]
offset_left = 31.0
offset_top = -598.0
offset_right = 1118.0
offset_bottom = -35.0

[node name="anim_shop" type="AnimationPlayer" parent="."]
root_node = NodePath("../Panel")
libraries = {
"": SubResource("AnimationLibrary_qmqob")
}

[node name="close_shop" type="Button" parent="."]
offset_left = 981.0
offset_top = -569.0
offset_right = 1083.0
offset_bottom = -521.0
text = "Close"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="anim_shop_sprite" type="AnimatedSprite2D" parent="Control"]
position = Vector2(571, -363)
sprite_frames = SubResource("SpriteFrames_7wh3x")

[node name="item_name_label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 462.0
offset_top = -549.0
offset_right = 675.0
offset_bottom = -472.0
theme_override_font_sizes/font_size = 50
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="item_desc_label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 444.0
offset_top = -269.0
offset_right = 703.0
offset_bottom = -209.0
theme_override_font_sizes/font_size = 25
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1

[node name="shop_prev_button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 363.0
offset_top = -417.0
offset_right = 418.0
offset_bottom = -311.0
theme_override_font_sizes/font_size = 40
text = "<"

[node name="shop_next_button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 703.0
offset_top = -416.0
offset_right = 758.0
offset_bottom = -310.0
theme_override_font_sizes/font_size = 40
text = ">"

[node name="shop_buy_button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 499.0
offset_top = -162.0
offset_right = 648.0
offset_bottom = -99.0
theme_override_font_sizes/font_size = 40
text = "Buy"

[connection signal="pressed" from="close_shop" to="." method="_on_close_shop_pressed"]
[connection signal="pressed" from="Control/shop_prev_button" to="." method="_on_shop_prev_button_pressed"]
[connection signal="pressed" from="Control/shop_next_button" to="." method="_on_shop_next_button_pressed"]
[connection signal="pressed" from="Control/shop_buy_button" to="." method="_on_shop_buy_button_pressed"]
